finish delete service
